--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header class="container mx-auto mt-7">
-      <!-- Nav -->
+      <!-- Nav bar -->
       <div class="navbar bg-base-100">
         <div class="navbar-start">
           <h1 class="text-5xl raleway font-semibold">P-Ticket</h1>
@@ -102,6 +102,7 @@
           Best offers for you
         </h1>
         <div class="flex justify-around">
+          <!-- card 1 -->
           <div class="card card-side w-[670px] h-56 bg-[#FFBF0F] mt-8">
             <div class="justify-start py-8 pl-16 pr-20 text-left">
               <h1 class="text-4xl font-extrabold">15% OFF</h1>
@@ -121,6 +122,7 @@
               </p>
             </div>
           </div>
+          <!-- card 2 -->
           <div class="card card-side w-[670px] h-56 bg-[#F78C9C] mt-8">
             <div class="justify-start py-8 pl-16 pr-20 text-left">
               <h1 class="text-4xl font-extrabold">20% OFF</h1>
@@ -152,14 +154,11 @@
         <h1 class="text-5xl font-extrabold mb-5">
           P.H Paribahan
         </h1>
-        <p
-        class="text-2xl  px-60">
-          Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .
-        </p>
+        <p class="mb-5 w-[900px] mx-auto text-2xl">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
       </section>
 
       <section class="mt-10 bg-[#F7F8F8] rounded-t-[80px] mb-4">
-        <!-- Greenline Paribahan section -->
+        <!-- Lamborginni Paribahan section -->
         <div class="container mx-auto flex flex-col lg:flex-row gap-8 bg-white rounded-3xl mb-7">
           <div class="flex-1 ">
             <div class="flex justify-between">
@@ -244,9 +243,6 @@
           <h2>Per Seat</h2>
         </div>
       </div>
-          </div>
-          </div>
-        </div>
       </section>
         <!-- Select Your Seat section -->
       <section>
@@ -447,11 +443,6 @@
               placeholder="Enter your email id"
               type="email"
             />
-            <!-- <button class="btn w-full bg-[#1DD100] text-center p-4">
-              Next
-            </button> -->
-            <!-- Modal & Next Button -->
-           
              <div class="">
               <button  id="next-btn" disabled onclick="my_modal_5.showModal()" class="btn disabled:cursor-not-allowed  w-full bg-[#1DD100]">
                 Next
