--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <div class="flex gap-4">
                 <img src="./images/bus-logo.png" alt="" />
                 <div>
-                  <h1 class="text-2xl lg:text-3xl font-semibold">Roton&cong Paribahan</h1>
+                  <h1 class="text-2xl lg:text-3xl font-semibold">Greenline Paribahan</h1>
                   <p>Coach-009-WEB ! AC_Business</p>
                 </div>
               </div>
